# JMMOrganizer

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  license
src/: main.cpp  settings.cpp  track_processing.cpp  utilities.cpp
third_party_licenses/cmake/: repository
third_party_licenses/haiku/: notes  repository
third_party_licenses/specification/: repository
